backend/tests/bruno/tada-api/negative/02-wrong-password.bru
post {
  url: {{base_url}}/api/v1/auth/login
  body: json
  auth: none
}

headers {
  Content-Type: application/json
}

body:json {
  {
    "email": "{{test_email}}",
    "password": "wrongpassword"
  }
}

docs {
  Login with wrong password. Expect 401.
}

tests {
  function onResponse(req, res) {
  expect(res.status).to.equal(401);
  }
}
